# SLtools

./: C_MODULES_TO_INCLUDE_IN_BUILD  DIRECTORIES_TO_INCLUDE_IN_BUILD  Makefile.am  __init__.py  autogen.sh  build.sh  configure  configure.ac  install.sh
ASTROHACKWEEK/Authors/: AUTHORS.txt  Angelo.txt  Bruno.txt  Carlos.txt  De.txt  Gabriel.txt  HabibDumet.txt  Martin.txt  chbrandt.txt  m.txt  maria.txt  sysop.txt
ASTROHACKWEEK/Carlos/: ascii_data.py  combine.py  distro.py  ds92stamps.py  fits_data.py  header_funcs.py  image2stamps.py  imcp.py  objs_reading.py  segmentation_ids.py  sextractor.py  table_matching.py
GUI/: interactive.py
PerturbativeMethod/: Doxyfile  PerturbedPNFW.tex  aareadme.txt  arc_cross_section.h  arc_properties.h  caustic.values.for.Fig8.Alard2008.txt  compare_gravlensTOpertarcs.sh  comparison_fns.h  elliptical_mass.h  external_shear_model.h  generate_arcs.h  generate_curves.h  gof_per_method.h  lens_model_old.h  lens_models.h  makearcs_pertmethod.cpp  nfw_circular_model.h  notes_forAlard2007Paper.tex  perturbative_method.h  perturbedSIS_with_ellipticalSource.cpp  plotarcs.gp  pnfw_model.h  pnfw_model2.h  pseudo_elliptical_model.h  psis_model.h  readme.txt  siep_model.h  simple_example.cpp  sis_model.h  sis_sub_model.h  sourceplane.eps  substructure_model.h  theta.h  theta_example.cpp  theta_find.h  theta_out.txt  vary_arc_params.sh
PerturbativeMethod/deprecated/: gof_per_method.h  pnfw_model_old.h
PerturbativeMethod/examples/: aareadme  aareadme.txt  configfile_maker_gravlens.cpp  cross_section_example.cpp  distortion_curves_example.cpp  ellip_mass.cpp  external_shear_teste2.cpp  fom_ks-e_space_pnfw.cpp  fom_pnfw_test.cpp  fom_siep_test.cpp  hausdorff.cpp  hausdorff.sh  makearcs_pertmethod.cpp  makearcstmp.cpp  nfw_sis.cpp  pe_sis_test.cpp  perturbed.PE_SIS_with_ellipticalSource.cpp  perturbedSIE_with_ellipticalSource.cpp  perturbedSIS_with_ellipticalSource.cpp  perturbedSIS_with_ellipticalSource_old.cpp  plotarcsandcaustics.gp  pnfw_test.cpp  pnfw_test_new.cpp  readme.txt
PerturbativeMethod/gnuplotScripts/: aareadme.txt
PerturbativeMethod/mathematicaCode/: aareadme.txt  caustics.forPerturbedSISpotential.nb  (+2 more)
SOGRAS/: JoinCatSogras.py  JoinCatSograsGalclean.py  MagSogras.py  Run_HistPhotoz.py  Run_MagSogras.py  cuts.py  gera_catalog_ord.py  get_ra_dec.py  match.py
arc_statistics/: cross-section.h  main.cpp  rotinas.h
arcellipse/: DES2217-3939_i_cut_arc.fits  arc.fits  arcfitting.py  fit_arcellipse.py  paint_arc_config.cfg  paint_arcs.py  plot_arcellipse_contour.py
c_sources/: sltoolsc.pc.in
catalog/: __init__.py  ascii_data.py  catalog2ds9region.py  data_subsets.py  ds9region.py  fits_data.py  fits_file.py  get_catalog_data.py  get_fits_data.py  get_halo_parameters.py  open_FITS_catalog.py  open_fits_catalog.py  ordering.py  readout_radec.py  select_halos.py  select_halos_by_radec.py  sort_by_column.py  table_matching.py  text_file.py
coordinate/: __init__.py  convert_arcsec_pix.py  convert_ra_dec.py  decimal2sexagesimal_conversion.py  linear_transformation.py  old_paint_arcs_functions.py  readout_radec.py  translation_and_rotation.py  translation_followed_by_rotation.py  wcs_conversion.py
cosmology/: old_paint_arcs_functions.py
doc/: doxygen.cfg  doxygen.cfg.bkp
etc/: HISTORY  INSTALL  README  dependencies_c.txt  install.sh  version.txt
geometry/: __init__.py  elementary_geometry.py  get_extrema_pts.py  mediatrix_analysis.py  separate_curves.py
gravlens/: __init__.py  convolve_frame.py  find_CC_new.py  find_cc.py  init_gravlens_parameter.py  init_gravlens_parameters.py  lens_finite_sources.py  lens_finite_sources_new.py  lens_parameters.py  lens_parameters_new.py  select_source_positions.py  select_source_positions_new.py
image/: __init__.py  add_arcs2image.py  add_arcs_2_image.py  add_images.py  add_noise.py  add_noise_2_image.py  arcfitting.py  catalog2ds9region.py  combine.py  convolve.py  convolve_frame.py  create_color_img.py  gauss_convolution.py  geometry.py  get_bisectrix_pts.py  get_catalog_data.py  get_extrema_2loops.py  get_extrema_bf.py  get_header_parameter.py  get_image_limits.py  get_image_limits_pywcs.py  get_length_2loops.py  get_length_brute.py  get_ra_dec_limits.py  header.py  header_funcs.py  image_noise_adding.py  imcopy.py  imcp.py  mediatrix_analysis.py  mediatrix_decomposition.py  new_objsshot.py  new_segment.py  objsshot.py  rescale_frame_by_color.py  run_SE_on_frames.py  segment.py  segmentation_ids.py  segobjs.py  sextractor.py
image_processing/: Python_handson.txt  background.py  hough.py  stddev.py
inversion/: __init__.py  constants.py  cosmology.py  cross_section_sep.py  elliptical_models.py  functions.py  gravlenspipeline.py  lenstool.py  parser.py  plot_utils.py  position_match.py  pseudo_elliptical_models.py  radial_models.py  read_catalogs.py  specific_stuff.py  sub_halo.py
io/: __init__.py  check_dependencies.py  config_parser.py  log.py  replace.py
lens/: __init__.py  compute_NFW_lens_parameters.py  compute_lens_model.py
numerical_methods/: general_methods.h  hausdorff_distance.h  integration.h  quadrature_integration.h  root_find.h  simpson_integrator.h  solving_system.h
numerical_methods/src/: Makefile.am  integration.h
paint_arcs/: paint_arcs.py
perturbative_method/: Doxyfile  aareadme.txt
pipelines/: __init__.py  catalog2cutout.py  catalog2ds9region.py  catalogs_cross_analysis.py  ds92stamps.py  eyescan.py  find_cc.py  image2stamps.py  objs_reading.py  paint_arcs.py  plot.py  table_matching.py
plot/: __init__.py  distro.py  interactive.py  plot_arcellipse_contour.py  plot_gravlens_crit.py  plot_templates.py
simulations/: __init__.py
sltools/: C_MODULES_TO_INCLUDE_IN_BUILD  DIRECTORIES_TO_INCLUDE_IN_BUILD
sltools/c_sources/: Makefile.am  configure.ac
sltools/c_sources/src/: arc_properties.h  generate_curves.c  nfw_circular_model.h  root_find.c  sie_model.h  siep_model.h  solving_system.c
statistics/: __init__.py  data_statistics.py  integration-class.h  integration.h
string/: __init__.py  info_from_filename.py  regexp.py
wcs/: __init__.py  transform.py
(+419 files in other folders)
